Added alot of stuf

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Project exclude paths
 node_modules/
 *.env
+*.cache
+*.VSCodeCounter
+dist/
 # meine zum spÃ¤ter lÃ¶schen
 veryOldXXX.html
 hallo.txt
